--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Personal Notes / Docs
 *.mdx  # Optional: ignore docs if auto-generated
 notes/
+
+# Cursor
+
+.cursor/
