--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lexical/list": "^0.25.0",
     "@lexical/react": "^0.25.0",
     "@lexical/rich-text": "^0.25.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lexical": "^0.25.0",
@@ -32,5 +33,10 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@vercel/speed-insights"
+    ]
   }
 }
