--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@lexical/list": "^0.25.0",
     "@lexical/react": "^0.25.0",
     "@lexical/rich-text": "^0.25.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lexical": "^0.25.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
