added vercel analytics to track visits

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lexical/react": "^0.25.0",
     "@lexical/rich-text": "^0.25.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
